tests/snapshots/regression/semantic_types__collections__heterogeneous_array_error.snap
---
source: tests/regression_snapshots.rs
---
$ flux --no-cache tests/fixtures/semantic_types/collections/heterogeneous_array_error.flx
exit_code: 1

[1 of 8] Compiling  Assert
[2 of 8] Compiling  Array
[3 of 8] Compiling  IO
[4 of 8] Compiling  List
[5 of 8] Compiling  Numeric
[6 of 8] Compiling  Option
[7 of 8] Compiling  String
• 2 errors • tests/fixtures/semantic_types/collections/heterogeneous_array_error.flx
error[E430]: Any Type Inferred

Could not determine a concrete type for `main`. Inferred type: `() -> Array<_>`.

  tests/fixtures/semantic_types/collections/heterogeneous_array_error.flx:1:1
  |
1 | fn main() {
  | ^^^^^^^^^

Hint:
  Add a type annotation: e.g. `fn main(x: Int, y: Int): Int`


error[E300]: Type Mismatch

I found a type mismatch.

  tests/fixtures/semantic_types/collections/heterogeneous_array_error.flx:2:10
  |
2 |     [|1, "x"|]
  |          ^^^
  |          --- this expression has type `String`

  |          --- this type mismatch is reported here

Note:
  expected type: Int
  found type: String
  the conflicting types meet at this expression

Help:
  These two types are not compatible.

Found 2 errors.
